add separate from and to email externalise cron, from_day and to_day to env variables

--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-PINCODE=
-EMAIL=
+PINCODE=413114
+FROM_EMAIL=
+TO_EMAIL=
 APPLICATION_PASSWORD=
-AGE=
+AGE=18
+FROM_DAY=2
+TO_DAY=5
+CRON=* * * * *
 
 #EXAMPLE:
 #PINCODE=800001,800023
