add readme for pm2 change env

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ TO_EMAIL=
 APPLICATION_PASSWORD=
 AGE=18
 FROM_DAY=2
-TO_DAY=5
-CRON=* * * * *
+TO_DAY=20
+CRON=*/15 * * * *
 
 #EXAMPLE:
 #PINCODE=800001,800023
